--- a/index.html
+++ b/index.html
@@ -10,9 +10,33 @@
 
 <body>
 
-<h1>Cristiano Ronaldo menor que Messi </h1>
+<h1><center>Cristiano Ronaldo menor que Messi </center></h1>
 
 <p>Esta é uma verdade!</p>
+
+<img src="imagem/img1.jpeg" width="960" height="540">
+
+<title>Bolas de ouro</title>
+
+<h1>Cristiano Ronaldo</h1>
+
+<img src="imagem/img2.jpg" width="799" height="466">
+
+<p> Cristiano tem míseras 5 bolas de ouro.</p>
+
+<h1> Messi </h1>
+
+<img src="imagem/img3.jpeg" width="771" height="420">
+
+<h1> Messi, desumilde já chegou na 7ª:</h1>
+
+<p>2009: 51 jogos, 33 gols e 17 assistências </p>
+<p>2010: 53 jogos, 47 gols e 11 assistências </p>
+<p>2011: 55 jogos, 53 gols e 22 assistências </p>
+<p>2012: 60 jogos, 72 gols e 29 assistências </p>
+<p>2015: 57 jogos, 58 gols e 27 assistências </p>
+<p>2019: 50 jogos, 51 gols e 19 assistências </p>
+<p>2021: 47 jogos, 38 gols e 14 assistências </p>
 
 </body>
 
