--- a/index.html
+++ b/index.html
@@ -22,7 +22,12 @@
 
 <img src="imagem/img2.jpg" width="799" height="466">
 
-<p> Cristiano tem míseras 5 bolas de ouro.</p>
+<h1> Cristiano tem míseras 5 bolas de ouro: </h1>
+<p>2008: 49 jogos, 42 gols e 8 assistências </p>
+<p>2013: 55 jogos, 55 gols e 13 assistências </p>
+<p>2014: 47 jogos, 51 gols e 17 assistências </p>
+<p>2016: 48 jogos, 51 gols e 15 assistências </p>
+<p> 2017: 46 jogos, 42 gols e 12 assistência </p>
 
 <h1> Messi </h1>
 
